--- a/Duck Duck Go/Environment.plist
+++ b/Duck Duck Go/Environment.plist
@@ -2,13 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>SchemeUserState</key>
-	<dict>
-		<key>Duck Duck Go.xcscheme</key>
-		<dict>
-			<key>orderHint</key>
-			<integer>4</integer>
-		</dict>
-	</dict>
+	<key>SearchURL</key>
+	<string>http://api.duckduckgo.com/?q=%@&amp;format=json</string>
 </dict>
 </plist>
